.metadata/.plugins/org.eclipse.cdt.ui/p2.build.log
19:50:27 **** Rebuild of configuration Release for project p2 ****
Info: Internal Builder is used for build
g++ "-ID:\\mingw\\lib\\gcc\\mingw32\\4.8.1\\include\\c++" -O3 -Wall -c -fmessage-length=0 -o "src\\p2.o" "..\\src\\p2.cpp" 
In file included from D:\mingw\lib\gcc\mingw32\4.8.1\include\c++/thread:35:0,
                 from ..\src\p2.cpp:10:
D:\mingw\lib\gcc\mingw32\4.8.1\include\c++/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
..\src\p2.cpp: In function 'int main()':
..\src\p2.cpp:21:5: error: 'thread' is not a member of 'std'
     std::thread t(hello);
     ^
..\src\p2.cpp:21:17: error: expected ';' before 't'
     std::thread t(hello);
                 ^
..\src\p2.cpp:22:5: error: 't' was not declared in this scope
     t.join();
     ^

19:50:28 Build Finished (took 714ms)

